2008-01-09  Elijah Newren  <newren gmail com>

	* smoketesting/convert-to-tarballs.py:
	Use gnome-suites-%d-%d.modules, not gnome-%d-%d.modules.  The latter
	contains extra cruft unrelated to releases.

2008-01-09  Elijah Newren  <newren gmail com>

	* smoketesting/tarball-conversion-stable.config:
	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable:
	Update for GNOME 2.20.3

	* smoketesting/convert-to-tarballs.py:
	Fix simple bug in obtaining moduleset path from the command line

2008-01-07  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Sort tarball/release stuff before all other
	events. Don't understand why it was the other way around.

2008-01-07  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/automail.py: Wrap descriptions using textwrap. Add a common
	footer to every mail. Don't output anything to stdout.
	* schedule/libschedule.py: Add custom definitions from the schedule
	file to the GnomeReleaseEvent (hackish). This allows to replace the
	hard coded 2.2[012] stuff with 'variables'.

2007-12-31  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/automail.py: Make it mail stuff 3 days in advance. This
	should be tweaked. Further, the descriptions in libschedule need
	updating.
	* schedule/libschedule.py: Make some of the descriptions more generic.

2007-12-31  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Add summary and description functions to
	GnomeReleaseEvent. Summary is a quick overview for usage in e.g. the
	subject of an email. Description provides full information about an
	event. E.g. that the tarballs should be released before 23:59 UTC,
	etc. The description texts need more work.
	* schedule/ical.py: Initial attempt at making an ical file. The alarms
	don't work with Evolution yet. This requires the 'vobject' and
	'dateutils' Python modules.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Add wiki_text function which gives a wiki
	text representation of a specific event.